--- a/config/locales/gl.yml
+++ b/config/locales/gl.yml
@@ -277,7 +277,10 @@ gl: # locale
     abbr_day_names: [Dom, Lu, Mar, Mér, Xo, Ven, Sá]
     month_names: [~, Xaneiro, Febreiro, Marzo, Abril, Maio, Xuño, Xullo, Agosto, Setembro, Outubro, Novembro, Decembro]
     abbr_month_names: [~, Xan, Feb, Mar, Abr, Maio, Xuño, Xullo, Ago, Set, Out, Nov, Dec]
-    order: [ :day, :month, :year ]
+    order:
+      - day
+      - month
+      - year
 
   time:
     formats:
@@ -2419,5 +2422,3 @@ gl: # locale
    change_password: "Cambiar o contrasinal"
    employee_advanced_search: "Busca avanzada de empregados/as"
    view_employees: "Ver empregados/as"
-
-
