--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -277,7 +277,10 @@ ja: # locale
     abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
     month_names: [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
     abbr_month_names: [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
-    order: [ :日, :月, :年 ]
+    order:
+      - 日
+      - 月
+      - 年
 
   time:
     formats:
@@ -2405,4 +2408,3 @@ ja: # locale
    change_password: "パスワード変更"
    employee_advanced_search: "職員詳細検索"
    view_employees: "職員閲覧"
-
